remove pagination